[MBP] Disable installation of library

--- a/libarchive/CMakeLists.txt
+++ b/libarchive/CMakeLists.txt
@@ -204,11 +204,11 @@ IF(NOT WIN32 OR CYGWIN)
 ENDIF(NOT WIN32 OR CYGWIN)
 
 # How to install the libraries
-INSTALL(TARGETS archive archive_static
-        RUNTIME DESTINATION bin
-        LIBRARY DESTINATION lib
-        ARCHIVE DESTINATION lib)
-INSTALL_MAN(${libarchive_MANS})
-INSTALL(FILES ${include_HEADERS} DESTINATION include)
+#INSTALL(TARGETS archive archive_static
+#        RUNTIME DESTINATION bin
+#        LIBRARY DESTINATION lib
+#        ARCHIVE DESTINATION lib)
+#INSTALL_MAN(${libarchive_MANS})
+#INSTALL(FILES ${include_HEADERS} DESTINATION include)
 
 add_subdirectory(test)
