CMakeLists.txt: Allow disabling the installation of docs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -187,6 +187,7 @@ OPTION(ENABLE_ICONV "Enable iconv support" ON)
 OPTION(ENABLE_TEST "Enable unit and regression tests" ON)
 OPTION(ENABLE_COVERAGE "Enable code coverage (GCC only, automatically sets ENABLE_TEST to ON)" FALSE)
 OPTION(ENABLE_INSTALL "Enable installing of libraries" ON)
+OPTION(ENABLE_INSTALL_DOCS "Enable installation of docs" ON)
 
 SET(POSIX_REGEX_LIB "AUTO" CACHE STRING "Choose what library should provide POSIX regular expression support")
 SET(ENABLE_SAFESEH "AUTO" CACHE STRING "Enable use of /SAFESEH linker flag (MSVC only)")
@@ -282,7 +283,9 @@ ENDMACRO (GENERATE_LIST_H)
 MACRO (INSTALL_MAN __mans)
   FOREACH (_man ${ARGV})
     STRING(REGEX REPLACE "^.+[.]([1-9])" "\\1" _mansect ${_man})
-    INSTALL(FILES ${_man} DESTINATION "share/man/man${_mansect}")
+    IF (ENABLE_INSTALL_DOCS)
+      INSTALL(FILES ${_man} DESTINATION "share/man/man${_mansect}")
+    ENDIF ()
   ENDFOREACH (_man)
 ENDMACRO (INSTALL_MAN __mans)
 #
@@ -1612,10 +1615,12 @@ IF(WIN32 AND NOT CYGWIN)
   # These PDF documents are available in the release package.
   #
   IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/doc/pdf)
-    INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/doc/pdf
-            DESTINATION share/man
-            FILES_MATCHING PATTERN "*.pdf"
-    )
+    IF(ENABLE_INSTALL_DOCS)
+      INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/doc/pdf
+              DESTINATION share/man
+              FILES_MATCHING PATTERN "*.pdf"
+      )
+    ENDIF()
   ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/doc/pdf)
 ENDIF(WIN32 AND NOT CYGWIN)
 #
